Fix issue detail page back link Mitigate issue project picker expanding too wide

--- a/src/app/list-elements/project-filter-bar/project-filter-bar.component.scss
+++ b/src/app/list-elements/project-filter-bar/project-filter-bar.component.scss
@@ -19,6 +19,9 @@ section {
 #project-picker {
   position: relative;
   flex: 1;
+  @media screen and (min-width: ($small - 1)) {
+    max-width: calc(100% - $side-nav-width);
+  }
 }
 
 .reset-button {
