--- a/src/app/main-nav/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav/main-nav.component.scss
@@ -11,7 +11,7 @@ mat-sidenav-container {
 }
 
 mat-sidenav {
-  width: 240px;
+  width: $side-nav-width;
 }
 
 .logo-toolbar {
